--- a/pom.xml
+++ b/pom.xml
@@ -43,36 +43,64 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		</dependency>
 
 	</dependencies>
-	
+
 	<build>
-	<sourceDirectory>src/main/java</sourceDirectory>
-	<plugins>
-		<plugin>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.7.0</version>
-			<configuration>
-				<source>1.8</source>
-				<target>1.8</target>
-				<deployment>
-					<resources>
-						<resource>
-							<directory>${project.basedir}/target</directory>
-							<includes>
-								<include>*.war</include>
-							</includes>
-						</resource>
-					</resources>
-				</deployment>
-			</configuration>
-		</plugin>
-		<plugin>
-			<artifactId>maven-war-plugin</artifactId>
-			<version>3.2.1</version>
-			<configuration>
-				<warSourceDirectory>target</warSourceDirectory>
-			</configuration>
-		</plugin>
-	</plugins>
-</build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<deployment>
+						<resources>
+							<resource>
+								<directory>${project.basedir}/target</directory>
+								<includes>
+									<include>*.war</include>
+								</includes>
+							</resource>
+						</resources>
+					</deployment>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<warSourceDirectory>target</warSourceDirectory>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.microsoft.azure</groupId>
+				<artifactId>azure-webapp-maven-plugin</artifactId>
+				<!-- check Maven Central for the latest version -->
+				<version>1.7.0</version>
+				<configuration>
+					<schemaVersion>v2</schemaVersion>
+					<resourceGroup>${gteste}</resourceGroup>
+					<appName>${agendateste}</appName>
+					<runtime>
+						<os>linux</os>
+						<javaVersion>jre11</javaVersion>
+						<webContainer>tomcat 8.5</webContainer>
+					</runtime>
+					<deployment>
+						<resources>
+							<resource>
+								<directory>${project.basedir}/target</directory>
+								<includes>
+									<include>*.war</include>
+								</includes>
+							</resource>
+						</resources>
+					</deployment>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
